# desktop

./: CMakeLists.txt  CPackOptions.cmake.in  NextcloudCPack.cmake  OPENLIST.cmake  OpenListCPack.cmake  REUSE.toml  TASKS.md  VERSION.cmake  config.h.in  resources.qrc  theme.qrc.in  version.h.in
.github/workflows/: block-unconventional-commits.yml  bug-report-labeler.yml  check-translations.yml  clang-format.yml  clang-tidy-review.yml  fixup.yml  linux-appimage-comment.yml  linux-appimage.yml  linux-clang-compile-tests.yml  linux-gcc-compile-tests.yml  macos-build-and-test.yml  macos-craft-ci.yml  needsinfohelper.yml  nextcloudfileproviderkit.yml  pr-feedback.yml  qml-label-check.yml  release.yml  reuse.yml  sonarcloud.yml  stale.yml  windows-build-and-test.yml
.tx/: config
admin/linux/: build-appimage.sh
admin/win/msi/: CMakeLists.txt  make-msi.bat.in
shell_integration/: CMakeLists.txt
shell_integration/MacOSX/: CMakeLists.txt  FileProviderUIExt.entitlements.cmake.license
shell_integration/MacOSX/NextcloudFileProviderKit/: README.md
shell_integration/MacOSX/NextcloudIntegration/: README.md
shell_integration/dolphin/: CMakeLists.txt  ownclouddolphinactionplugin.cpp  ownclouddolphinoverlayplugin.cpp  ownclouddolphinpluginhelper.cpp  ownclouddolphinpluginhelper.h
shell_integration/icons/: CMakeLists.txt
shell_integration/libcloudproviders/: CMakeLists.txt  org.freedesktop.CloudProviders.ini.in.license
shell_integration/nautilus/: CMakeLists.txt  setappname.sh  syncstate.py
shell_integration/windows/: CMakeLists.txt  WinShellExt.wxs.in  WinShellExtConstants.h.in
shell_integration/windows/NCContextMenu/: CMakeLists.txt  NCClientInterface.cpp  NCContextMenu.cpp  NCContextMenu.rc  NCContextMenuFactory.cpp  NCContextMenuRegHandler.cpp  RegDelnode.h  dllmain.cpp
shell_integration/windows/NCOverlays/: CMakeLists.txt  DllMain.cpp  NCOverlay.cpp  NCOverlay.rc  NCOverlayFactory.cpp  NCOverlayRegistrationHandler.cpp
shell_integration/windows/NCUtil/: CommunicationSocket.cpp  CommunicationSocket.h  NCUtil.rc  RemotePathChecker.h
src/cmd/: CMakeLists.txt  cmd.cpp
src/common/: checksumcalculator.cpp  checksums.cpp  filesystembase.cpp  macsandboxpersistentaccess.mm  macsandboxsecurityscopedaccess.mm  ownsql.cpp  remotepermissions.cpp  shellextensionutils.cpp  syncjournaldb.cpp  utility.cpp  utility.h  utility_mac_sandbox.mm  utility_win.cpp
src/csync/: CMakeLists.txt  csync_exclude.cpp
src/csync/vio/: csync_vio_local_unix.cpp  csync_vio_local_win.cpp
src/gui/: CMakeLists.txt  accountmanager.cpp  accountsettings.cpp  accountsettings.h  accountsetupcommandlinemanager.cpp  accountsetupfromcommandlinejob.cpp  accountstate.cpp  accountstate.h  application.cpp  callstatechecker.cpp  caseclashfilenamedialog.cpp  conflictsolver.cpp  connectionvalidator.cpp  connectionvalidator.h  editlocallyjob.cpp  editlocallymanager.cpp  editlocallyverificationjob.cpp  fileactivitylistmodel.cpp  filetagmodel.cpp  folder.cpp  foldercreationdialog.cpp  folderman.cpp  folderman.h  folderstatusmodel.cpp  folderstatusmodel.h  folderwatcher.cpp  generalsettings.cpp  guiutility.cpp  iconutils.cpp  lockwatcher.cpp  logbrowser.cpp  navigationpanehelper.cpp  navigationpanehelper.h  notificationconfirmjob.cpp  ocsjob.cpp  owncloudgui.cpp  owncloudsetupwizard.cpp  proxyauthhandler.cpp  remotewipe.cpp  sharee.cpp  (+12 more)
src/gui/cloudproviders/: cloudproviderwrapper.cpp
src/gui/creds/: credentialsfactory.cpp  flow2auth.cpp  httpcredentialsgui.cpp  webflowcredentials.cpp
src/gui/filedetails/: filedetails.cpp  shareemodel.cpp  sharemodel.cpp  sortedsharemodel.cpp
src/gui/integration/: fileactionsmodel.cpp
src/gui/macOS/: fileprovider_mac.mm  fileproviderdomainmanager.mm  fileprovidereditlocallyjob.cpp  fileprovidereditlocallyjob_mac.mm  fileprovideritemmetadata_mac.mm  fileproviderservice.mm  fileprovidersettingscontroller_mac.mm  fileproviderutils.h  fileproviderutils_mac.mm  fileproviderxpc_mac.mm  fileproviderxpc_mac_utils.mm  findersyncservice.mm  findersyncxpc_mac.mm  singleinstancemanager_mac.h  singleinstancemanager_mac.mm
src/gui/socketapi/: CMakeLists.txt  socketapi.cpp  socketapi_mac.mm
src/gui/tray/: activitylistmodel.cpp  notificationhandler.cpp  svgimageprovider.cpp  syncstatussummary.cpp  talkreply.cpp  unifiedsearchresultslistmodel.cpp  usermodel.cpp  usermodel.h
src/gui/updater/: updater.cpp
src/gui/wizard/: flow2authwidget.cpp  openlistcredspage.cpp  openlistcredspage.h  (+9 more)
src/libsync/: CMakeLists.txt  abstractnetworkjob.cpp  accessmanager.cpp  account.cpp  account.h  bandwidthmanager.cpp  basepropagateremotedeleteencrypted.cpp  bulkpropagatordownloadjob.cpp  bulkpropagatordownloadjob.h  bulkpropagatorjob.cpp  capabilities.cpp  caseclashconflictsolver.cpp  clientproxy.cpp  clientsideencryption.cpp  clientsideencryptionjobs.cpp  clientsideencryptionprimitives.cpp  clientsideencryptiontokenselector.cpp  clientstatusreporting.cpp  clientstatusreportingcommon.cpp  clientstatusreportingdatabase.cpp  clientstatusreportingnetwork.cpp  configfile.cpp  configfile.h  cookiejar.cpp  deletejob.cpp  discovery.cpp  discoveryphase.cpp  discoveryphase.h  encryptedfoldermetadatahandler.cpp  encryptfolderjob.cpp  foldermetadata.cpp  localdiscoverytracker.cpp  lockfilejobs.cpp  logger.cpp  networkjobs.cpp  networkjobs.h  ocsassistantconnector.cpp  ocsprofileconnector.cpp  ocsuserstatusconnector.cpp  openlistsettings.cpp  (+30 more)
src/libsync/creds/: abstractcredentials.cpp  httpcredentials.cpp  keychainchunk.cpp  openlistcredentials.cpp  openlistcredentials.h  tokencredentials.cpp
src/libsync/vfs/cfapi/: CMakeLists.txt  cfapiwrapper.cpp  cfapiwrapper.h  hydrationjob.cpp  hydrationjob.h  vfs_cfapi.cpp
src/libsync/vfs/cfapi/shellext/: CMakeLists.txt
src/libsync/vfs/suffix/: CMakeLists.txt  vfs_suffix.cpp
src/libsync/vfs/xattr/: CMakeLists.txt  vfs_xattr.cpp  xattrwrapper_linux.cpp
test/: CMakeLists.txt  nextcloud_add_test.cmake  openlist_add_test.cmake  testcfapishellextensionsipc.cpp  testfolderman.cpp  testhelper.h  testopenlistpropagator.cpp  testupdater.cpp
test/csync/: CMakeLists.txt
(+149 files in other folders)
